--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "ai-interview-coach",
   "private": true,
@@ -14,7 +13,7 @@
     "react-dom": "^18.2.0",
     "lucide-react": "^0.330.0",
     "recharts": "^2.12.0",
-    "@google/genai": "^0.2.1"
+    "@google/genai": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
