feat: Integrate Vercel Analytics and improve component robustness
Adds Vercel Analytics to track user engagement and performance.

Introduces mount state checks in `InterviewStep` to prevent race conditions and memory leaks during component unmounting and asynchronous operations. Also enhances `FeedbackStep` with smarter text wrapping for radar chart labels and adds an `Activity` icon for potential future use. Updates dependencies to include `@vercel/analytics`.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "lucide-react": "^0.330.0",
     "recharts": "^2.12.0",
-    "@google/genai": "*"
+    "@google/genai": "*",
+    "@vercel/analytics": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
